@@ -10,6 +10,7 @@ BUGFIX:
 * type=address actions=value-host-object-add-netmask-m32 | skip if IPv6 address
 * type=playbook | skip creating out file for usage of html-merger
 * type=address | improvement for ipv6 if 'actions=name-rename:host.pub_$$value.no-netmask$$-$$netmask$$'
+* type=address-merger | bugfix for fqdn objects with different value but same name spread of DG hierarchy
 
 GENERAL:
 * class PanoramaConf | improve output if parentDG can not be calculated for DeviceGroup
